# robot_ws

./: README.md
demo_video/: Screencast from 04-04-2025 03:54:22 PM.webm
install/: local_setup.sh  setup.sh
install/robot_bringup/lib/robot_bringup/: viz_server.py
install/robot_bringup/share/robot_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/robot_bringup/share/robot_bringup/cmake/: robot_bringupConfig-version.cmake  robot_bringupConfig.cmake
install/robot_bringup/share/robot_bringup/config/: ekf.yaml  ros2_control_param.yaml  twist_mux.yaml
install/robot_bringup/share/robot_bringup/environment/: ament_prefix_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/robot_msg/share/robot_msg/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
log/: latest_build  latest_list
src/robot_bringup/: CMakeLists.txt  package.xml
src/robot_bringup/config/: ekf.yaml  ros2_control_param.yaml  twist_mux.yaml
src/robot_bringup/launch/: map_and_localization.launch.py  robot_gazebo_classic.launch.py
src/robot_bringup/maps/: my_custom_map.pgm  my_custom_map.yaml
src/robot_bringup/robot_bringup/: log_traj_viz.py  viz_server.py
src/robot_bringup/robot_desc/: robot.urdf.xacro  ros2_control.xacro
src/robot_bringup/rviz/: config.rviz
src/robot_bringup/trajectory_log/: my_robot_traj_3.csv  my_robot_traj_5.csv  my_traj.csv  my_traj_2.csv  my_traj_3.csv
src/robot_bringup/world/: world.sdf
src/robot_msg/: CMakeLists.txt
(+71 files in other folders)
